<resources>
    <string name="app_name">Wake_Up_Cafe</string>
    <string name="contact_info">Contactcinfo: Email:birendraydv1410@gmail.com Phone no: 9117986970 Location:sector_27d(sco-423) Chandigarh,near_mall</string>>
    <string name="slogan">With the Refreshing Taste of Coffee you will feel refreshed up and excited about your work.</string>>
    <string name="types_of_coffee">specialized in- cafe latte,cappuccino,espresso,mochaccino </string>
    <string name="info">Wake up cafe has been setup due to know about the area and timming information and find the way on their area.</string>>
    <string name="times_of_operation">Hours_of_operation Monday:-09:00-23:00 Tuesday:-09:00-23:00 Wednesday:-10:00-00:00 Thursday:-10:00-02:00 Friday:-12:00-06:00 Saturday:-12:00-06:00 Sunday:-12:00-06:00</string>>
</resources>
